--- a/styles/index.css
+++ b/styles/index.css
@@ -4,22 +4,21 @@
 }
 
 :root {
-	--header-background: #00619d ;
-	--color-text:#111;
-	--gray-text: #7a7a7a;
-    --blauw-text: #1b92e4;
-	--color-background: rgb(233,234,237);
+   --body-background: rgb(233,234,237);
+   --nav-background:#dcdfe6;
+   --section-background: #ffffff; 
+   --footer-background: rgb(42,43,60);
+   
+  --dark-blue: #00619d;
+  
+  --black-text: #111;
+  --blue-text: #1675b6;
+  --gray-text: #7a7a7a;
+  --white-text: #eee;
 
-	--nav-background:#dcdfe6;
-
-	--section-background: #ffffff; 
-
-	--hover-text: #2196f3; 
-	--drop-shadow: rgb(197, 197, 197);
-    --span-ster: #ffd600;
-
-	--footer-background: rgb(42,43,60);
-	--footer-tekst: #eee; 
+  --drop-shadow: rgb(197, 197, 197);
+  --hover-text: #2196f3;
+  --span-ster: #ffd600;
 }
 
 a, abbr{
@@ -59,9 +58,8 @@ main section:nth-of-type(1) img:nth-of-type(3){
 }
 
 main section:nth-of-type(1) h2 {
-    color: var(--footer-tekst);
-    /* background-color: var(--color-text); */
-    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    color: var(--white-text);
+    text-shadow: -1px 0 var(--black-text), 0 1px var(--black-text), 1px 0 var(--black-text), 0 -1px var(--black-text);
     padding: 0.5em;
     padding-bottom: 0;
 
@@ -70,7 +68,7 @@ main section:nth-of-type(1) h2 {
 }
 
 main section:nth-of-type(1) p:nth-of-type(1) {
-    color: var(--blauw-text);
+    color: var(--blue-text);
     text-transform: uppercase;
     padding: 0.5em;
     padding-bottom: 0;
@@ -96,7 +94,7 @@ main section:nth-of-type(2) {
 }
 
 main section:nth-of-type(2) a{
-    color: var(--color-text);
+    color: var(--black-text);
 }
 
 /*eerste ul*/
@@ -115,7 +113,7 @@ main section:nth-of-type(2) ul:nth-of-type(1) li {
 }
 
 main section:nth-of-type(2) ul:nth-of-type(1) li:nth-of-type(1) a { 
-    color: var(--blauw-text);
+    color: var(--blue-text);
 }
     
 /*tweede ul*/
@@ -139,7 +137,7 @@ main section:nth-of-type(2) ul:nth-of-type(2) h3{
     display: flex;
     flex-wrap: wrap;
     margin-left: 0.5em;
-    color: var(--color-text);
+    color: var(--black-text);
 
 }
 
@@ -147,7 +145,7 @@ main section:nth-of-type(2) ul:nth-of-type(2) li p:nth-of-type(1){
     grid-column: 2;
     grid-row: 1;
 
-    color: var(--blauw-text);
+    color: var(--blue-text);
     text-transform: uppercase;
     font-size: .9em;
     margin-left: 0.5em;
@@ -204,7 +202,7 @@ main section:nth-of-type(2) ul:nth-of-type(2) p:nth-of-type(4){
 main section:nth-of-type(2) > a{
     border: 1px solid var(--nav-background);
     padding: 10px;
-    color: var(--color-text);
+    color: var(--black-text);
     cursor: pointer;
     display: inline-block;
     text-align: center;
@@ -239,7 +237,7 @@ main section:nth-of-type(3) ul li > p, main section:nth-of-type(4) ul li > p, ma
 } 
 
 main section:nth-of-type(3) ul li a p, main section:nth-of-type(4) ul li a p, main section:nth-of-type(5) ul li a p { 
-    color: var(--hover-text);
+    color: var(--blue-text);
     font-weight: bold;
 } 
 /* EIND SECTION 3 + 4 + 5*/
@@ -301,7 +299,7 @@ main section:nth-of-type(7) ul:nth-of-type(1) li{
 } 
 
 main section:nth-of-type(7) a{
-    color: var(--color-text);
+    color: var(--black-text);
 }
 
 /* Tweede ul */
@@ -320,7 +318,7 @@ main section:nth-of-type(7) ul:nth-of-type(2) li img{
 }
 
 main section:nth-of-type(7) a h3{
-    color: var(--hover-text);
+    color: var(--blue-text);
 }
 
 main section:nth-of-type(7) a p{
@@ -383,7 +381,7 @@ span:nth-of-type(5):before{
 
 /* Alle sections */
 section:nth-of-type(3) > a, section:nth-of-type(4) > a, section:nth-of-type(5) > a, section:nth-of-type(6) > a,  section:nth-of-type(7) > a { 
-    color: var(--color-text);
+    color: var(--black-text);
     
     display: flex;
     justify-content: end;
