--- a/styles/profile.css
+++ b/styles/profile.css
@@ -3,26 +3,31 @@
 }
 
 :root {
-	--header-background: #00619d ;
-	--color-text:#111;
-	--gray-text: #7a7a7a;
-    --blauw-text: #1b92e4;
-	--color-background: rgb(233,234,237);
-
+	--body-background: rgb(233,234,237);
 	--nav-background:#dcdfe6;
-
 	--section-background: #ffffff; 
-
-	--hover-text: #2196f3; 
-	--drop-shadow: rgb(197, 197, 197);
-
 	--footer-background: rgb(42,43,60);
-	--footer-tekst: #eee; 
+	
+   --dark-blue: #00619d;
+   
+   --black-text: #111;
+   --blue-text: #1675b6;
+   --gray-text: #7a7a7a;
+   --white-text: #eee;
+ 
+   --drop-shadow: rgb(197, 197, 197);
+   --hover-text: #2196f3;
+   --span-ster: #ffd600;
 }
 
 a, abbr{
 	text-decoration: none;
   }
+
+  /* main{
+	display: flex;
+	flex-wrap: wrap;
+  } */
 
   main section:nth-of-type(2) h2,
   main section:nth-of-type(3) h2{
@@ -31,6 +36,11 @@ a, abbr{
   }
   
 /* Section 1 */
+main section:nth-of-type(1) img{
+	border-radius: 10em;
+	width: 4em; 
+}
+
 main section:nth-of-type(1) ul{
 	display: flex;
 	flex-wrap: wrap;
@@ -50,6 +60,14 @@ main section:nth-of-type(1) button{
 
 	font-size: 15px;
 }
+
+main section:nth-of-type(1) li:nth-of-type(1) button{
+    background: var(--dark-blue);
+    border: 1px solid var(--gray-text); 
+	color: var(--white-text);
+}
+
+
 /* EIND section 1 */
 
 /* Section 2 */
@@ -78,13 +96,13 @@ main section:nth-of-type(3) ul li img{
 }
 
 main section:nth-of-type(3) a h3{
-	color: var(--hover-text);
+	color: var(--blue-text);
 	padding-left: 0.5em;
 }
 
 main section:nth-of-type(3) a p{
 	font-size: 0.9em;
-	color: var(--color-text);
+	color: var(--black-text);
 	padding-left: 0.5em;
 	margin: 0.1em;
 }
