--- a/styles/style.css
+++ b/styles/style.css
@@ -8,25 +8,24 @@
   }
   
   :root {
-	  --header-background: #00619d ;
-	  --color-text:#111;
-	  --gray-text: #7a7a7a;
-	  --blauw-text: #1b92e4;
-	  --color-background: rgb(233,234,237);
-  
+      --body-background: rgb(233,234,237);
 	  --nav-background:#dcdfe6;
-  
 	  --section-background: #ffffff; 
-  
-	  --hover-text: #2196f3; 
-	  --drop-shadow: rgb(197, 197, 197);
-  
 	  --footer-background: rgb(42,43,60);
-	  --footer-tekst: #eee; 
+	  
+	 --dark-blue: #00619d;
+	 
+	 --black-text: #111;
+	 --blue-text: #1675b6;
+	 --gray-text: #7a7a7a;
+	 --white-text: #eee;
+
+	 --drop-shadow: rgb(197, 197, 197);
+	 --hover-text: #2196f3; 
   }
   
   body{
-	  background-color: var(--color-background);
+	  background-color: var(--body-background);
   }
 
   a, abbr{
@@ -35,7 +34,7 @@
   
 
   header{
-	  background-color: var(--header-background);
+	  background-color: var(--dark-blue);
 	  padding: .5em;
 	  /* position: sticky;
 	  z-index: 2; */
@@ -68,12 +67,12 @@
 
 	text-transform: uppercase;
 	font-size: 1.5em;
-	color: var(--footer-tekst);
+	color: var(--white-text);
 
   } 
   
   header a{
-	  color:var(--color-text)
+	  color:var(--black-text)
   }
   
   header button{
@@ -81,7 +80,7 @@
 	  align-items: center;
 	  gap: .25em;
   
-	  background-color: var(--header-background);
+	  background-color: var(--dark-blue);
 	  border: none;	
   }
   
@@ -96,7 +95,7 @@
   }
   
   nav{
-	  margin-left: 3em;
+	  margin-left: 7em;
 	  padding: 2em;
 	  background-color: var(--nav-background);
   
@@ -113,11 +112,14 @@
 	  translate: 0;
 	  position: absolute;
 	}
+
+	nav h2{
+	 font-size: 20px;	
+	}
   
   nav a{
 	  display:flex;
-	  align-items:center;
-	  column-gap:.25em;
+	  margin: 0.5em;
   }
   
 	nav button {
@@ -166,7 +168,7 @@
   /****footer****/
   footer{
 	  background-color: var(--footer-background);
-	 color: var(--footer-tekst);
+	 color: var(--white-text);
 	  padding: 1em;
 
 	  display: flex;
@@ -174,7 +176,7 @@
   }
   
   footer ul li a{
-	 color: var(--footer-tekst);
+	 color: var(--white-text);
 	 font-size: 0.8em;
   }
   
@@ -210,7 +212,7 @@
   }
 
  footer section:nth-of-type(1) ul:nth-of-type(1) li{
-	border: 1px solid var(--footer-tekst);
+	border: 1px solid var(--white-text);
 	border-radius: 50%;
 
   }
@@ -225,7 +227,7 @@
 
   /* Tweede ul */
   footer section:nth-of-type(1) ul:nth-of-type(2) li{
-	border: 1px solid var(--footer-tekst);
+	border: 1px solid var(--white-text);
 	border-radius: 30px;
 	margin: 0.5em;
   }
