--- a/styles/index.css
+++ b/styles/index.css
@@ -243,7 +243,169 @@ main section:nth-of-type(3) ul li a p, main section:nth-of-type(4) ul li a p, ma
 /* EIND SECTION 3 + 4 + 5*/
 
 /*section 4*/
+main section:nth-of-type(4) ol{
+    background: var(--section-background);
 
+    position: relative;
+    z-index: 10;
+    right: -9px;
+    bottom: -206px;
+
+    padding: 0.3em;
+    border-radius: 4px;
+}
+
+main section:nth-of-type(4) ul li ol li{
+    display: flex;
+    justify-content: center;
+
+    margin: 0;
+    padding: 0;
+}
+
+main section:nth-of-type(4) ul li ol li p {
+    margin: 0;
+    padding: 0;
+    font-weight: bold;
+}
+
+/* span ster 1 */
+main section:nth-of-type(4) ul li span{
+    color: var(--span-ster);
+    font-size: 1em;
+    position: relative;
+
+    margin: 0;
+    padding: 0;
+}
+
+section:nth-of-type(4) li:nth-of-type(1) ol:nth-of-type(1) span:nth-of-type(1):before, 
+section:nth-of-type(4) li:nth-of-type(1) ol:nth-of-type(1) span:nth-of-type(2):before, 
+section:nth-of-type(4) li:nth-of-type(1) ol:nth-of-type(1) span:nth-of-type(3):before, 
+section:nth-of-type(4) li:nth-of-type(1) ol:nth-of-type(1) span:nth-of-type(4):before,
+section:nth-of-type(4) li:nth-of-type(1) ol:nth-of-type(1) span:nth-of-type(5):before{
+    color: var(--span-ster);
+    content: '\2605'; /* Full star in UTF-8 */
+    position: absolute;
+    width: 100%;    
+}
+
+/* span ster 2 */
+main section:nth-of-type(4) ul li span{
+    color: var(--span-ster);
+    font-size: 1em;
+    position: relative;
+
+    margin: 0;
+    padding: 0;
+}
+
+section:nth-of-type(4) li:nth-of-type(2) ol span:nth-of-type(1):before, 
+section:nth-of-type(4) li:nth-of-type(2) ol span:nth-of-type(2):before, 
+section:nth-of-type(4) li:nth-of-type(2) ol span:nth-of-type(3):before, 
+section:nth-of-type(4) li:nth-of-type(2) ol span:nth-of-type(4):before{
+    color: var(--span-ster);
+    content: '\2605'; /* Full star in UTF-8 */
+    position: absolute;
+    
+}
+
+section:nth-of-type(4) li:nth-of-type(2) ol span:nth-of-type(5):before{
+    color: var(--span-ster);
+    content: '\2605'; /* Full star in UTF-8 */
+    position: absolute;
+    width: 50%;
+    overflow: hidden;
+
+} 
+
+/* span ster 3 */
+main section:nth-of-type(4) ul li span{
+    color: var(--span-ster);
+    font-size: 1em;
+    position: relative;
+
+    margin: 0;
+    padding: 0;
+}
+
+section:nth-of-type(4) li:nth-of-type(3) ol span:nth-of-type(1):before, 
+section:nth-of-type(4) li:nth-of-type(3) ol span:nth-of-type(2):before, 
+section:nth-of-type(4) li:nth-of-type(3) ol span:nth-of-type(3):before, 
+section:nth-of-type(4) li:nth-of-type(3) ol span:nth-of-type(4):before{
+    color: var(--span-ster);
+    content: '\2605'; /* Full star in UTF-8 */
+    position: absolute;
+    
+}
+
+/* span ster 4 */
+main section:nth-of-type(4) ul li span{
+    color: var(--span-ster);
+    font-size: 1em;
+    position: relative;
+
+    margin: 0;
+    padding: 0;
+}
+
+section:nth-of-type(4) li:nth-of-type(4) ol span:nth-of-type(1):before, 
+section:nth-of-type(4) li:nth-of-type(4) ol span:nth-of-type(2):before{
+    color: var(--span-ster);
+    content: '\2605'; /* Full star in UTF-8 */
+    position: absolute;
+    
+}
+
+section:nth-of-type(4) li:nth-of-type(4) ol span:nth-of-type(3):before{
+    color: var(--span-ster);
+    content: '\2605'; /* Full star in UTF-8 */
+    position: absolute;
+    width: 50%;
+    overflow: hidden;
+
+} 
+
+/* span ster 5 */
+main section:nth-of-type(4) ul li span{
+    color: var(--span-ster);
+    font-size: 1em;
+    position: relative;
+
+    margin: 0;
+    padding: 0;
+}
+
+section:nth-of-type(4) li:nth-of-type(5) ol:nth-of-type(1) span:nth-of-type(1):before, 
+section:nth-of-type(4) li:nth-of-type(5) ol:nth-of-type(1) span:nth-of-type(2):before, 
+section:nth-of-type(4) li:nth-of-type(5) ol:nth-of-type(1) span:nth-of-type(3):before, 
+section:nth-of-type(4) li:nth-of-type(5) ol:nth-of-type(1) span:nth-of-type(4):before,
+section:nth-of-type(4) li:nth-of-type(5) ol:nth-of-type(1) span:nth-of-type(5):before{
+    color: var(--span-ster);
+    content: '\2605'; /* Full star in UTF-8 */
+    position: absolute;
+    width: 100%;    
+}
+
+/* span ster 6 */
+main section:nth-of-type(4) ul li span{
+    color: var(--span-ster);
+    font-size: 1em;
+    position: relative;
+
+    margin: 0;
+    padding: 0;
+}
+
+section:nth-of-type(4) li:nth-of-type(6) ol span:nth-of-type(1):before, 
+section:nth-of-type(4) li:nth-of-type(6) ol span:nth-of-type(2):before, 
+section:nth-of-type(4) li:nth-of-type(6) ol span:nth-of-type(3):before, 
+section:nth-of-type(4) li:nth-of-type(6) ol span:nth-of-type(4):before{
+    color: var(--span-ster);
+    content: '\2605'; /* Full star in UTF-8 */
+    position: absolute;
+    
+}
 
 /*EIND***section 4*/
 
@@ -357,10 +519,10 @@ main section:nth-of-type(7) ul:nth-of-type(2) li span{
     padding: 0;
 }
 
-span:nth-of-type(1):before, 
-span:nth-of-type(2):before, 
-span:nth-of-type(3):before, 
-span:nth-of-type(4):before{
+section:nth-of-type(7) span:nth-of-type(1):before, 
+section:nth-of-type(7) span:nth-of-type(2):before, 
+section:nth-of-type(7) span:nth-of-type(3):before, 
+section:nth-of-type(7) span:nth-of-type(4):before{
     text-shadow: 0 0 2px var(--drop-shadow);
     color: var(--span-ster);
     content: '\2605'; /* Full star in UTF-8 */
@@ -368,7 +530,7 @@ span:nth-of-type(4):before{
     
 }
 
-span:nth-of-type(5):before{
+section:nth-of-type(7) span:nth-of-type(5):before{
     text-shadow: 0 0 2px var(--drop-shadow);
     color: var(--span-ster);
     content: '\2605'; /* Full star in UTF-8 */
@@ -385,6 +547,8 @@ section:nth-of-type(3) > a, section:nth-of-type(4) > a, section:nth-of-type(5) >
     
     display: flex;
     justify-content: end;
-    }
+
+    font-size: 14px;
+}
     
     
