--- a/styles/index.css
+++ b/styles/index.css
@@ -453,16 +453,32 @@ main section:nth-of-type(6) li img{
 main section:nth-of-type(7) > ul:nth-of-type(1){
     overflow: auto; 
     white-space: nowrap; 
-    margin: 1em; 
+    padding: 1em;
+
+    border-top: 1px solid var(--nav-background);
+    border-bottom: 1px solid var(--nav-background);
 }
 
-main section:nth-of-type(7) ul:nth-of-type(1) li{ 
+main section:nth-of-type(7) > ul:nth-of-type(1) li{ 
     display: inline-block;
+
+    margin-left: 1em;
+    margin-right: 8em;
+
+    scroll-snap-type: mandatory;
+
 } 
 
-main section:nth-of-type(7) a{
+main section:nth-of-type(7)  ul:nth-of-type(1) li a { 
     color: var(--black-text);
-}
+    font-weight: bold;
+    font-size: 14px;
+} 
+
+main section:nth-of-type(7)  ul:nth-of-type(1) li:nth-of-type(1) a { 
+    color: var(--blue-text);
+} 
+
 
 /* Tweede ul */
 main section:nth-of-type(7) ul:nth-of-type(2) a {
@@ -471,17 +487,16 @@ main section:nth-of-type(7) ul:nth-of-type(2) a {
 	grid-template-rows: 0.1fr 0.6fr 0.3fr 0.6fr;
 
 }
+main section:nth-of-type(7)  ul:nth-of-type(2) li{
+    display: inline-block;
+}
 
 main section:nth-of-type(7) ul:nth-of-type(2) > li {
-    border-top: 1px solid var(--nav-background);
     border-bottom: 1px solid var(--nav-background);
     padding: 0.5em;
-
+    display: flex;
 } 
 
-main section:nth-of-type(7) li{
-	display: flex;
-}
 
 main section:nth-of-type(7) ul li img{
 	width: 4em;
@@ -489,7 +504,7 @@ main section:nth-of-type(7) ul li img{
     grid-column: 2;
 }
 
-main section:nth-of-type(7) a{
+main section:nth-of-type(7) ul:nth-of-type(2) a{
 	font-size: 0.9em;
 	color: var(--black-text);
 	padding-left: 0.5em;
@@ -513,7 +528,7 @@ main section:nth-of-type(7) a ul{
 }
 main section:nth-of-type(7) a ul li:nth-of-type(1){
     padding-left: 0.5em;
-    
+
     color: var(--black-text);
 }
 
@@ -585,14 +600,35 @@ section:nth-of-type(7) span:nth-of-type(4):before{
 
 /*EIND***section 7*/
 
-/* Alle sections */
+/* more a  */
 section:nth-of-type(3) > a, section:nth-of-type(4) > a, section:nth-of-type(5) > a, section:nth-of-type(6) > a,  section:nth-of-type(7) > a { 
     color: var(--black-text);
+    font-size: 14px;
     
     display: flex;
     justify-content: end;
 
-    font-size: 14px;
+    /* position: absolute;
+    left: 540px; */
 }
-    
-    
+
+/*     
+section:nth-of-type(3) > a{
+    top: 80em;
+}   
+
+section:nth-of-type(4) > a{
+    top: 107.5em;
+}  
+
+section:nth-of-type(5) > a{
+    top: 138.3em;
+} 
+
+section:nth-of-type(6) > a{
+    top: 165em;
+}  
+
+section:nth-of-type(7) > a{
+    top: 189em;
+}   */
