--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,7 @@
 	margin: 0;
 	padding: 0;  
   
-	font-family: sans-serif;
+	font-family: lato, Helvetica, Arial, sans-serif;
   
   }
   
@@ -98,31 +98,73 @@
   header > ul {
 	background-color: var(--section-background);
 	border-radius: 2px;
+	border: 1px solid var(--nav-background);
 
 	position: absolute;
 	top: calc(6.4%);
-	right: calc(15%);
+	right: calc(13%);
 
 	z-index: 200;
 
-	/* transform: translateY(-20em); */
+	padding: 0.5em;
+
+	transform: translateY(-200em);
   }
-/* 
+
   header > ul.inBeeld {
 	transform: translateY(0);
-  } */
+  }
+
+  header > ul li:nth-of-type(12){
+    border-bottom: 1px solid var(--nav-background);
+	color: var(--blue-text);
+  }
+
+  
+  header > ul li:nth-of-type(11) > a,
+  header > ul li:nth-of-type(12) > a{
+	color: var(--blue-text);
+  }
 
   header > ul li a{
 	font-size: 14px;
 
-	margin: 1em;
+	margin: 0.3em;
+
+	display: flex;
+	align-items: center;
+  }
+
+
+  
+  header > ul li:active{
+	background-color: var(--nav-background);
   }
 
   header > ul li a img{
-	width: 14px;
+	width: 1.2em;
+	margin: 0.3em;
   }  
 
+/* form */
+header > form {
+	background-color: var(--section-background);
+	border-radius: 2px;
+	border: 1px solid var(--nav-background);
 
+	position: absolute;
+	top: calc(6.4%);
+
+	z-index: 200;
+
+	padding: 0.5em;
+
+	/* transform: translateY(-200em); */
+  }
+
+  /* header > form.inBeeld {
+	transform: translateY(0);
+  } */
 
 
 
