--- a/styles/index.css
+++ b/styles/index.css
@@ -147,8 +147,10 @@ main section:nth-of-type(2) ul:nth-of-type(2) li p:nth-of-type(1){
 
     color: var(--blue-text);
     text-transform: uppercase;
-    font-size: .9em;
+    font-size: 12px;
     margin-left: 0.5em;
+    margin-bottom: 0.2em;
+    margin-top: 0.2em;
 }
 
 main section:nth-of-type(2) ul:nth-of-type(2) p:nth-of-type(2){
