--- a/styles/style.css
+++ b/styles/style.css
@@ -282,6 +282,13 @@ header > form button{
 	  flex-wrap: wrap;
   }
   
+  footer section:nth-of-type(2) h2,
+  footer section:nth-of-type(3) h2,
+  footer section:nth-of-type(4) h2{
+	font-size: 14px;
+	text-transform: uppercase;
+  }
+
   footer ul li a{
 	 color: var(--white-text);
 	 font-size: 0.8em;
@@ -291,10 +298,6 @@ header > form button{
   width: 10em;
   }
   
-  footer h3{
-	  text-transform: uppercase;
-	  font-size: 0.9em;
-  }
 
   footer p{
 	font-size: 0.9em;
@@ -309,7 +312,13 @@ header > form button{
 	 margin: 0;
 	 padding: 0;
   }
+
 /* Section 1 */
+  footer section:nth-of-type(1) h2{
+	font-size: 0.8em;
+	font-weight: lighter;
+  }
+
   /* Eerste ul */
   footer section:nth-of-type(1) ul:nth-of-type(1){
 	display: flex;
@@ -323,11 +332,6 @@ header > form button{
 	border-radius: 50%;
   }
 
-  footer section:nth-of-type(1) h2{
-	font-size: 12px;
-	font-weight: lighter;
-  }
-
   footer section:nth-of-type(1) ul:nth-of-type(1) img{
 	width: 1.2em;
 	margin: 0.5em;
@@ -337,12 +341,10 @@ header > form button{
   }
 
   /* Tweede ul */
-  
   footer section:nth-of-type(1) ul:nth-of-type(2) li{
 	border: 1px solid var(--white-text);
 	border-radius: 30px;
 	margin: 0.5em;
-	
   }
 
   footer section:nth-of-type(1) ul:nth-of-type(2) li a{
@@ -352,12 +354,26 @@ header > form button{
 	display: flex;
 	align-items: center;
   }
+
+  footer section:nth-of-type(1) ul:nth-of-type(2) li a p:nth-of-type(1){
+	font-size: 10px;
+
+  }
+
+  footer section:nth-of-type(1) ul:nth-of-type(2) li a p:nth-of-type(2){
+	font-size: 16px;
+	font-weight: bold;
+  }
   
   footer section:nth-of-type(1) ul:nth-of-type(2) img{
 	width: 1.5em;
 	margin: 0.5em;
   }
-
 /* EIND section 1 */
 
+footer section:nth-of-type(2) ul li,
+footer section:nth-of-type(3) ul li,
+footer section:nth-of-type(4) ul li{
+	padding-bottom: 1em;
+ }
   /*EIND*****footer****/
